# NSC-2025-Zorepad

./: .gitignore  CMakeLists.txt  README.md
assets/objects/blocking/: cone.gltf  cube.gltf
assets/objects/sponzaAtrium/: test.gltf
assets/shaders/: colors.vert  empty_shader.frag  gui.frag  gui.vert  octmap.glsl  shadow.frag  shadow.vert  text.frag  text.vert
assets/shaders/bloom/: bloom.frag  downsample.frag
assets/shaders/deferred/: const.glsl  deferred_pbr.frag  ssao.frag
assets/shaders/deferred/gbuffer/: gbuffer_pass.vert
assets/shaders/forward/: background.frag  heightmap.tesc
assets/shaders/ibl/: cubemap.vert
assets/shaders/postprocessing/: fxaa.frag
assets/shaders/terrain/: heightmap_base.tese  heightmap_gbuffer_pass.frag
include/: Engine.h  Entity.h  Export.h  FrustumCulling.h  GUIElement.h  GUIHandler.h  GUIScreen.h  GUITextureManager.h  IPlayerController.h  Input.h  Label.h  LightSources.h  ModelManager.h  Render.h  Scene.h  SceneSerializer.h  ScreenDispatcher.h  SoundDevice.h  SoundEffectsPlayer.h  TexturedButton.h  TexturedPanel.h  UUID.h  Window.h  mj_pch.cpp  mj_pch.h
lib/: CMakeLists.txt
src/: SpacePlayerController.cpp  SpacePlayerController.h  constants.cpp  constants.h  main.cpp  planets_calculation.cpp  planets_calculation.h
src/screen/: MainMenuScreen.h  WarningScreen.h
